--- a/config.gradle
+++ b/config.gradle
@@ -56,6 +56,9 @@ ext{
          glide : "com.github.bumptech.glide:glide:4.9.0",
 
          //材料设计
-         material :  "com.google.android.material:material:1.0.0+"
+         material :  "com.google.android.material:material:1.0.0+",
+
+         //Andpermission权限申请
+         permission : "com.yanzhenjie.permission:x:2.0.1"
  ]
 }
