1.完善规范xml 2.toolbar统一

--- a/GreenDaoSDK/build.gradle
+++ b/GreenDaoSDK/build.gradle
@@ -35,6 +35,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api 'org.greenrobot:greendao:3.2.2' // add library
-    compileOnly "org.projectlombok:lombok:1.16.18"
-    api 'org.glassfish:javax.annotation:10.0-b28'
+
+    /*compileOnly "org.projectlombok:lombok:1.16.18"
+    api 'org.glassfish:javax.annotation:10.0-b28'*/
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
