--- a/component_list/build.gradle
+++ b/component_list/build.gradle
@@ -7,12 +7,21 @@ apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -26,9 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-   // implementation 'com.android.support:appcompat-v7:28.0.0'
-    //testImplementation 'junit:junit:4.12'
-   // androidTestImplementation 'com.android.support.test:runner:1.0.2'
-   // androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api project(':common')
+    annotationProcessor rootProject.ext.dependencies.butterknifecompiler
+    annotationProcessor rootProject.ext.dependencies.arouterCompiler
 }
