--- a/component_list/src/main/AndroidManifest.xml
+++ b/component_list/src/main/AndroidManifest.xml
@@ -1,2 +1,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.component_list" />
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.component_list">
+
+    <application
+        android:name="com.lantel.app.com.app.MyApplication"
+        android:resizeableActivity="true"
+        android:maxAspectRatio="2.4"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:replace="android:appComponentFactory"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
+        >
+        <activity android:name="com.lantel.app.com.app.AppMVPActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="com.lantel.app.com.lantel.list.ListActivity"/>
+
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.4" />
+    </application>
+</manifest>
