--- a/component_list/src/main/AndroidManifest.xml
+++ b/component_list/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
 
         <activity android:name="com.lantel.app.com.lantel.list.ListActivity"/>
 
+        <activity android:name="com.lantel.app.com.lantel.personmess.activity.PersonalMessActivity"/>
+
+        <activity android:name="com.lantel.app.com.lantel.personmess.activity.EditActivity"/>
         <meta-data
             android:name="android.max_aspect"
             android:value="2.4" />
